# polyphonic_sound_station

./: package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_parse.rs  main.rs  playback.rs
src/pages/Home/: Home.css  Home.tsx  handleFileSelect.ts
src/utility/data/: track1.ts  track2.ts
src/utility/types/: AudioTrack.ts
